GS-12690 TECH: Reposition 960 on the outer container for the web site - prevent wrapping on school overview page, backgrounds on ad slots, and site background gradient.

--- a/src/webapp/res/css/00_reset/reset.css
+++ b/src/webapp/res/css/00_reset/reset.css
@@ -58,7 +58,7 @@ table {
 body {
     font: 13px / 1.3 Arial, sans-serif;
     color: #333;
-    background: #68aaf1 url(/res/img/gs_gradient_bg.jpg) 50% 0 repeat-y;
+    /*background: #68aaf1 url(/res/img/gs_gradient_bg.jpg) 50% 0 repeat-y;*/
 }
 
 body.cobranded {
